EasyCaptcha test
Signed-off-by: cj <power4j@outlook.com>